fix: change before pseudo-element to div with negative z-index and nbsp symbol in it

--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body {
 	background-color: #000000;
 }
 
-body::before {
-	content: " ";
+.bg-image {
 	position: absolute;
 	top: 0;
 	left: 0;
